samples/_failures_safe/1761476925_dc86ff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3fc016e4.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_3fc016e4.c:173:5: error: expected declaration or statement at end of input
  173 |     while (heap->size > 0) {
      |     ^~~~~
./samples/SAFE/__tmp_3fc016e4.c:173:5: error: expected declaration or statement at end of input
